# JupyterNotebooks

./: .env.example  .pre-commit-config.yaml  AUDIT_COMPLETE.md  AUDIT_SUMMARY.md  BUILD.md  CHANGELOG.md  COMMUNITY.md  COMPREHENSIVE_AUDIT_ROADMAP.md  COMPREHENSIVE_GAP_ANALYSIS.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  COPYRIGHT  DEPLOYMENT_FIXES_COMPLETE.md  ELEVATION_EXECUTIVE_SUMMARY.md  ELEVATION_REPORT.md  EXECUTION_CHECKLIST.md  FINAL_AUDIT_COMPLETE.md  HOW_TO_BUILD_A_SAAS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MAINTENANCE.md  MONETIZATION.md  Makefile  OBSERVABILITY.md  PHASE3_COMPLETE.md  PRODUCT_COMPLETE.md  PRODUCT_OVERVIEW.md  PRODUCT_README.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  README_AUTOMATION.md  RELEASE.md  REVIEW_COMPLETE.md  ROADMAP.md  SAAS_STARTER.md  SECURITY.md  SHOWCASE_DEMOS.md  SPRINT_CLOSEOUT.md  SPRINT_ELEVATION_CLOSEOUT.md  (+9 more)
.github/: dependabot.yml
agent_factory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
alembic/: env.py
dataroom/: 01_EXEC_SUMMARY.md  02_PRODUCT_DECK_OUTLINE.md  03_METRICS_OVERVIEW.md  04_CUSTOMER_PROOF.md  05_TECH_OVERVIEW.md  06_SECURITY_COMPLIANCE_NOTES.md  07_CAP_TABLE_PLACEHOLDER.md  APPLICATION_ANSWERS_YC_DRAFT.md
demo/: DEMO_CHECKLIST.md  DEMO_PATH.md  DEMO_SCRIPT.md
deployment/: README.md  render.yaml  staging.yaml  vercel.json
docs/: API_REFERENCE.md  ARCHITECTURE_DETAILED.md  AUTOMATION_SETUP_COMPLETE.md  BACKEND_CONSOLIDATION_SUMMARY.md  COMPETITIVE_ANALYSIS.md  COMPLETE_AUTOMATION_FOCUS_COMPLETION_REPORT.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPLETE_EXECUTION_GUIDE.md  COMPLETE_STRATEGIC_ANALYSIS.md  COMPLETE_TASKS_SUMMARY.md  DATAROOM_FILL_GUIDE.md  DEPLOYMENT.md  EXECUTION_ROADMAP.md  FEATURES_OPERATIONS_MARKETING_COMPLETE.md  FINAL_COMPLETE_DELIVERABLES_SUMMARY.md  FINAL_TESTING_SUMMARY.md  FOUNDER_INFO_SUMMARY.md  FOUNDER_MANUAL.md  FUNDAMENTAL_GAPS_COMPLETE.md  GITHUB_ACTIONS_AUTOMATION.md  IMPLEMENTATION_COMPLETE.md  LOW_PRIORITY_TASKS_COMPLETE.md  (+52 more)
notebook-library/packs/pack_0001/: .env.example  CHANGELOG.md  README.md  pack.json  pyproject.toml  quickstart.md
notebook-library/packs/pack_0001/assets/: preview.html
notebook-library/packs/pack_0001/outputs/: agent_configs.json  execution_summary.md  project_structure.json
notebook-library/packs/pack_0002/: CHANGELOG.md  README.md  pack.json  pyproject.toml  quickstart.md
notebook-library/packs/pack_0002/assets/: preview.html
notebook-library/packs/pack_0004/: CHANGELOG.md  README.md  pack.json  pyproject.toml  quickstart.md
notebook-library/packs/pack_0004/assets/: preview.html
notebook-library/packs/pack_0005/: CHANGELOG.md  README.md  pack.json  pyproject.toml  quickstart.md  requirements.txt
notebook-library/packs/pack_0005/assets/: preview.html
notebook-library/templates/pack_template/: README.md  pack.json  pyproject.toml
(+1108 files in other folders)
