[project]
name = "stripe-export-cleaner"
version = "1.0.0"
description = "Clean and transform Stripe export CSVs for analysis (no API required)"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-nbval>=0.10.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
